Forgot password & timer fixed

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 Woopons.xcworkspace/xcuserdata/harsh.xcuserdatad/UserInterfaceState.xcuserstate
 Woopons.xcworkspace/xcuserdata/harsh.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+Woopons.xcworkspace/xcuserdata/harsh.xcuserdatad/UserInterfaceState.xcuserstate
