--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 Woopons.xcworkspace/xcuserdata/harsh.xcuserdatad/UserInterfaceState.xcuserstate
 Woopons.xcworkspace/xcuserdata/harsh.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 Woopons.xcworkspace/xcuserdata/harsh.xcuserdatad/UserInterfaceState.xcuserstate
+*.xcuserstate
+*.xcbkptlist
+*.xcuserstate
