Updated images placeholder

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Woopons.xcworkspace/xcuserdata/harsh.xcuserdatad/UserInterfaceState.xcuserstate
 *.xcuserstate
 *.xcbkptlist
 *.xcuserstate
+*.xcuserstate
