--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Woopons.xcworkspace/xcuserdata/harsh.xcuserdatad/UserInterfaceState.xcuserstate
 *.xcbkptlist
 *.xcuserstate
 *.xcuserstate
+*.xcuserstate
