--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Woopons.xcworkspace/xcuserdata/harsh.xcuserdatad/UserInterfaceState.xcuserstate
 *.xcuserstate
 *.xcuserstate
 *.xcuserstate
+*.xcuserstate
