--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Woopons.xcworkspace/xcuserdata/harsh.xcuserdatad/UserInterfaceState.xcuserstate
 *.xcuserstate
 *.xcuserstate
 *.xcuserstate
+*.xcuserstate
