--- a/Woopons/Info.plist
+++ b/Woopons/Info.plist
@@ -21,11 +21,11 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>NSCameraUsageDescription</key>
-	<string>Allow app to access camera to change profile picture</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Allow app to access camera to change profile picture</string>
 </dict>
 </plist>
